--- a/banned.html
+++ b/banned.html
@@ -62,8 +62,8 @@
 
   <div class="box">
     <h2>Enter Your UID or Email</h2>
-    <input type="text" id="userInput" placeholder="Enter UID or Email" />
-    <input type="password" id="passwordInput" placeholder="(Optional) Password to check status" />
+    <input type="text" id="userInput" placeholder="Enter Email" />
+    <input type="password" id="passwordInput" placeholder="Password to check status" />
     <button onclick="checkIfBanned()">OK</button>
   </div>
 
